Add logical properties

--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -24,7 +24,7 @@ $breadcrumb-item-separator-color: $border-hover !default
     align-items: center
     display: flex
     &:first-child a
-      padding-left: 0
+      padding-inline-start: 0
     &.is-active
       a
         color: $breadcrumb-item-active-color
@@ -41,9 +41,9 @@ $breadcrumb-item-separator-color: $border-hover !default
     justify-content: flex-start
   .icon
     &:first-child
-      margin-right: 0.5em
+      margin-inline-end: 0.5em
     &:last-child
-      margin-left: 0.5em
+      margin-inline-start: 0.5em
   // Alignment
   &.is-centered
     ol,
