--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -151,7 +151,7 @@ body
 .navbar-burger
   color: $navbar-burger-color
   +hamburger($navbar-height)
-  margin-left: auto
+  margin-inline-start: auto
 
 .navbar-menu
   display: none
@@ -348,10 +348,10 @@ a.navbar-item,
     flex-shrink: 0
   .navbar-start
     justify-content: flex-start
-    margin-right: auto
+    margin-inline-end: auto
   .navbar-end
     justify-content: flex-end
-    margin-left: auto
+    margin-inline-start: auto
   .navbar-dropdown
     background-color: $navbar-dropdown-background-color
     border-bottom-left-radius: $navbar-dropdown-radius
@@ -360,7 +360,7 @@ a.navbar-item,
     box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1)
     display: none
     font-size: 0.875rem
-    left: 0
+    +inset-inline-start(0)
     min-width: 100%
     position: absolute
     top: 100%
@@ -397,9 +397,9 @@ a.navbar-item,
   .navbar > .container,
   .container > .navbar
     .navbar-brand
-      margin-left: -.75rem
+      margin-inline-start: -.75rem
     .navbar-menu
-      margin-right: -.75rem
+      margin-inline-end: -.75rem
   // Fixed navbar
   .navbar
     &.is-fixed-bottom-desktop,
