--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -71,11 +71,11 @@ $button-static-border-color: $border !default
       height: 1.5em
       width: 1.5em
     &:first-child:not(:last-child)
-      margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
-      margin-right: $button-padding-horizontal / 4
+      margin-inline-start: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+      margin-inline-end: $button-padding-horizontal / 4
     &:last-child:not(:first-child)
-      margin-left: $button-padding-horizontal / 4
-      margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
+      margin-inline-start: $button-padding-horizontal / 4
+      margin-inline-end: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
     &:first-child:last-child
       margin-left: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
       margin-right: calc(#{-1 / 2 * $button-padding-horizontal} - #{$button-border-width})
@@ -269,7 +269,7 @@ $button-static-border-color: $border !default
   .button
     margin-bottom: 0.5rem
     &:not(:last-child):not(.is-fullwidth)
-      margin-right: 0.5rem
+      margin-inline-end: 0.5rem
   &:last-child
     margin-bottom: -0.5rem
   &:not(:last-child)
@@ -287,14 +287,14 @@ $button-static-border-color: $border !default
   &.has-addons
     .button
       &:not(:first-child)
-        border-bottom-left-radius: 0
-        border-top-left-radius: 0
+        border-end-start-radius: 0
+        border-start-start-radius: 0
       &:not(:last-child)
-        border-bottom-right-radius: 0
-        border-top-right-radius: 0
-        margin-right: -1px
+        border-end-end-radius: 0
+        border-start-end-radius: 0
+        margin-inline-end: -1px
       &:last-child
-        margin-right: 0
+        margin-inline-end: 0
       &:hover,
       &.is-hovered
         z-index: 2
