--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -38,7 +38,7 @@ $dropdown-divider-background-color: $border-light !default
 
 .dropdown-menu
   display: none
-  left: 0
+  +inset-inline-start(0)
   min-width: $dropdown-menu-min-width
   padding-top: $dropdown-content-offset
   position: absolute
@@ -62,8 +62,8 @@ $dropdown-divider-background-color: $border-light !default
 
 a.dropdown-item,
 button.dropdown-item
-  padding-right: 3rem
-  text-align: left
+  padding-inline-end: 3rem
+  text-align: inherit
   white-space: nowrap
   width: 100%
   &:hover
