--- a/sass/components/menu.sass
+++ b/sass/components/menu.sass
@@ -42,9 +42,9 @@ $menu-label-spacing: 1em !default
       color: $menu-item-active-color
   li
     ul
-      border-left: $menu-list-border-left
+      border-inline-start: $menu-list-border-left
       margin: $menu-nested-list-margin
-      padding-left: $menu-nested-list-padding-left
+      padding-inline-start: $menu-nested-list-padding-left
 
 .menu-label
   color: $menu-label-color
