--- a/sass/utilities/mixins.sass
+++ b/sass/utilities/mixins.sass
@@ -128,6 +128,26 @@
     @media screen and (min-width: $fullhd)
       @content
 
+=ltr
+  @if not $rtl
+    @content
+
+=rtl
+  @if $rtl
+    @content
+
+=inset-inline-start($spacing)
+  @if $rtl
+    right: $spacing
+  @else
+    left: $spacing
+
+=inset-inline-end($spacing)
+  @if $rtl
+    left: $spacing
+  @else
+    right: $spacing
+
 // Placeholders
 
 =unselectable
