--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -287,11 +287,11 @@ $button-static-border-color: $border !default
   &.has-addons
     .button
       &:not(:first-child)
-        border-end-start-radius: 0
-        border-start-start-radius: 0
+        border-bottom-left-radius: 0
+        border-top-left-radius: 0
       &:not(:last-child)
-        border-end-end-radius: 0
-        border-start-end-radius: 0
+        border-bottom-right-radius: 0
+        border-top-right-radius: 0
         margin-inline-end: -1px
       &:last-child
         margin-inline-end: 0
