Add RTL build scripts

--- a/css/bulma-rtl.css
+++ b/css/bulma-rtl.css
@@ -3406,7 +3406,7 @@ fieldset[disabled] .button {
 
 .notification > .delete {
   position: absolute;
-  right: 0.5rem;
+  left: 0.5rem;
   top: 0.5rem;
 }
 
@@ -5362,15 +5362,15 @@ fieldset[disabled] .select select:hover {
 .field.has-addons .control:first-child:not(:only-child) .button,
 .field.has-addons .control:first-child:not(:only-child) .input,
 .field.has-addons .control:first-child:not(:only-child) .select select {
-  border-bottom-right-radius: 0;
-  border-top-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
 }
 
 .field.has-addons .control:last-child:not(:only-child) .button,
 .field.has-addons .control:last-child:not(:only-child) .input,
 .field.has-addons .control:last-child:not(:only-child) .select select {
-  border-bottom-left-radius: 0;
-  border-top-left-radius: 0;
+  border-bottom-right-radius: 0;
+  border-top-right-radius: 0;
 }
 
 .field.has-addons .control .button:not([disabled]):hover, .field.has-addons .control .button:not([disabled]).is-hovered,
@@ -5597,7 +5597,7 @@ fieldset[disabled] .select select:hover {
 
 .control.is-loading::after {
   position: absolute !important;
-  right: 0.625em;
+  left: 0.625em;
   top: 0.625em;
   z-index: 4;
 }
@@ -5804,7 +5804,7 @@ fieldset[disabled] .select select:hover {
 
 .dropdown-menu {
   display: none;
-  left: 0;
+  right: 0;
   min-width: 12rem;
   padding-top: 4px;
   position: absolute;
@@ -6388,7 +6388,7 @@ a.list-item {
   background: none;
   height: 40px;
   position: fixed;
-  right: 20px;
+  left: 20px;
   top: 20px;
   width: 40px;
 }
@@ -7433,7 +7433,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     box-shadow: 0 8px 8px rgba(10, 10, 10, 0.1);
     display: none;
     font-size: 0.875rem;
-    left: 0;
+    right: 0;
     min-width: 100%;
     position: absolute;
     top: 100%;
@@ -8022,7 +8022,7 @@ label.panel-block:hover {
 
 .tabs.is-boxed a {
   border: 1px solid transparent;
-  border-radius: 4px 4px 0 0;
+  border-radius: 0 0 4px 4px;
 }
 
 .tabs.is-boxed a:hover {
@@ -8061,11 +8061,11 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 4px 0 0 4px;
+  border-radius: 0 4px 4px 0;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 0 4px 4px 0;
+  border-radius: 4px 0 0 4px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -8082,15 +8082,15 @@ label.panel-block:hover {
 .tabs.is-toggle.is-toggle-rounded li:first-child a {
   -webkit-padding-start: 1.25em;
           padding-inline-start: 1.25em;
-  border-bottom-left-radius: 290486px;
-  border-top-left-radius: 290486px;
+  border-bottom-right-radius: 290486px;
+  border-top-right-radius: 290486px;
 }
 
 .tabs.is-toggle.is-toggle-rounded li:last-child a {
   -webkit-padding-end: 1.25em;
           padding-inline-end: 1.25em;
-  border-bottom-right-radius: 290486px;
-  border-top-right-radius: 290486px;
+  border-bottom-left-radius: 290486px;
+  border-top-left-radius: 290486px;
 }
 
 .tabs.is-small {
@@ -10897,4 +10897,4 @@ label.panel-block:hover {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem;
 }
-/*# sourceMappingURL=bulma.css.map */
+/*# sourceMappingURL=bulma-rtl.css.map */
