--- a/sass/base/generic.sass
+++ b/sass/base/generic.sass
@@ -4,7 +4,7 @@ $body-min-width: 300px !default
 $body-rendering: optimizeLegibility !default
 $body-family: $family-primary !default
 $body-overflow-x: hidden !default
-$body-overflow-y: scroll !default
+$body-overflow-y: auto !default
 
 $body-color: $text !default
 $body-font-size: 1em !default
