--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.8.2 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -4320,23 +4320,23 @@ a.tag:hover {
   background-color: white;
   border-color: #dbdbdb;
   border-radius: 4px;
-  color: inherit;
+  color: #363636;
 }
 
 .input::-moz-placeholder, .textarea::-moz-placeholder, .select select::-moz-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input::-webkit-input-placeholder, .textarea::-webkit-input-placeholder, .select select::-webkit-input-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:-moz-placeholder, .textarea:-moz-placeholder, .select select:-moz-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:-ms-input-placeholder, .textarea:-ms-input-placeholder, .select select:-ms-input-placeholder {
-  color: inherit;
+  color: rgba(54, 54, 54, 0.3);
 }
 
 .input:hover, .textarea:hover, .select select:hover, .is-hovered.input, .is-hovered.textarea, .select select.is-hovered {
@@ -7188,7 +7188,6 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .navbar-item {
-  display: block;
   flex-grow: 0;
   flex-shrink: 0;
 }
@@ -7355,9 +7354,6 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   .navbar-item,
   .navbar-link {
     align-items: center;
-    display: flex;
-  }
-  .navbar-item {
     display: flex;
   }
   .navbar-item.has-dropdown {
@@ -11590,10 +11586,9 @@ svg {
 }
 
 .bd-github-button {
-  background-color: #eff3f6;
-  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
-  border-color: #1b1f2333;
-  color: #24292e;
+  background-color: #ea4aaa;
+  border-color: #ea4aaa !important;
+  color: #fff;
   font-size: 0.875rem;
   height: auto;
   padding: calc(0.5em - 1px) 1em;
@@ -11606,7 +11601,7 @@ svg {
 }
 
 .bd-github-button .icon {
-  color: #ea4aaa;
+  color: inherit;
 }
 
 .bd-github-button .tag {
@@ -11615,11 +11610,16 @@ svg {
   margin: -1px -8px 0 7px;
 }
 
-.bd-github-button:hover {
-  background-color: #e6ebf1;
-  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
-  background-position: -.5em;
-  border-color: #1b1f2359;
+.bd-github-button:hover, .bd-github-button:focus {
+  background-color: #e7339f;
+}
+
+.bd-github-button:active {
+  background-color: #e51c95;
+}
+
+.bd-github-button:hover, .bd-github-button:focus, .bd-github-button:active {
+  color: #fff;
 }
 
 .bd-patreon-button {
