Update Expo April 2020

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11771,6 +11771,18 @@ svg {
   }
 }
 
+@media screen and (max-width: 768px) {
+  .bd-index-buttons {
+    margin-top: 3rem;
+  }
+}
+
+@media screen and (min-width: 769px), print {
+  .bd-index-buttons {
+    margin-top: 6rem;
+  }
+}
+
 .bd-index-header {
   text-align: center;
 }
