--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -51,6 +51,8 @@ $table-striped-row-even-hover-background-color: $scheme-main-ter !default
       a,
       strong
         color: currentColor
+    &.is-vcentered
+      vertical-align: middle
   th
     color: $table-cell-heading-color
     &:not([align])
