--- a/bulma.sass
+++ b/bulma.sass
@@ -6,4 +6,5 @@
 @import "sass/form/_all"
 @import "sass/components/_all"
 @import "sass/grid/_all"
+@import "sass/helpers/_all"
 @import "sass/layout/_all"
